--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   image_picker: ^1.1.2
   provider: ^6.1.4
+  cloud_firestore: ^5.6.6
+  firebase_auth: ^5.5.2
 
 dev_dependencies:
   flutter_test:
