--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.4
   cloud_firestore: ^5.6.6
   firebase_auth: ^5.5.2
+  firebase_storage: ^12.4.5
 
 dev_dependencies:
   flutter_test:
